<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mMainToolbar"
        style="@style/CommonToolbarStyle"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/mMainToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@android:color/white"
                tools:text="ABC" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>
    <!-- /.End of toolbar -->

    <RelativeLayout
        android:id="@+id/mMainTopLN"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/mMainToolbar">

        <ImageView
            android:id="@+id/mPlaceImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_back_drop"
            android:scaleType="centerCrop"
            tools:src="@drawable/ho_chi_minh_bg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/flag"
                android:scaleType="fitXY"
                android:src="@drawable/flag_viet_nam" />
            <!-- /.End of ImageView Country Flag -->

            <TextView
                android:id="@+id/mPlaceNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ha_noi_viet_nam"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/white" />
            <!-- /.End of Place Label -->

            <TextView
                android:id="@+id/mPlaceTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ha_noi_viet_nam"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>


    <!-- /.End of top -->

    <LinearLayout
        android:id="@+id/mFirstServiceLN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mMainTopLN"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/mHotelLN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_16"
            android:paddingBottom="@dimen/padding_16">

            <ImageView
                android:layout_width="@dimen/large_icon_size"
                android:layout_height="@dimen/large_icon_size"
                android:contentDescription="@string/hotel"
                android:src="@drawable/ic_hotel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@android:color/black" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/mAtmLN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_16"
            android:paddingBottom="@dimen/padding_16">

            <ImageView
                android:layout_width="@dimen/large_icon_size"
                android:layout_height="@dimen/large_icon_size"
                android:contentDescription="@string/atm"
                android:src="@drawable/ic_atm" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atm"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@android:color/black" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mSecondServiceLN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mFirstServiceLN"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/mHospitalLN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_16"
            android:paddingBottom="@dimen/padding_16">

            <ImageView
                android:layout_width="@dimen/large_icon_size"
                android:layout_height="@dimen/large_icon_size"
                android:contentDescription="@string/hospital"
                android:src="@drawable/ic_hospital" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospital"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@android:color/black" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/mBusLN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_16"
            android:paddingBottom="@dimen/padding_16">

            <ImageView
                android:layout_width="@dimen/large_icon_size"
                android:layout_height="@dimen/large_icon_size"
                android:contentDescription="@string/bus"
                android:src="@drawable/ic_bus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/mMainDetailServiceFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize" />

</RelativeLayout>